<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9edf5"
    android:orientation="vertical"
    tools:context=".ui.Activities.DetailActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_45">
  <ImageView
      android:id="@+id/ivBack"
      android:layout_width="@dimen/dp_45"
      android:layout_height="@dimen/dp_45"
      android:padding="@dimen/dp_15"
      android:src="@mipmap/ic_back"/>

  <ImageView
      android:id="@+id/delete"
      android:layout_width="@dimen/dp_45"
      android:layout_height="@dimen/dp_45"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="60dp"
      android:padding="@dimen/dp_10"
      android:src="@drawable/baseline_delete_forever_24" />

  <ImageView
      android:id="@+id/edit"
      android:layout_width="@dimen/dp_45"
      android:layout_height="@dimen/dp_45"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="4dp"
      android:padding="@dimen/dp_10"
      android:scaleX="0.86"
      android:scaleY="0.86"
      android:src="@drawable/file_edit" />
</RelativeLayout>

  <ImageView
      android:id="@+id/recipeImageDetail"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:background="#adc6f0"
      android:padding="@dimen/dp_15"
      android:src="@mipmap/ic_adds" />

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="237dp"
      android:visibility="gone"
      android:background="#adc6f0"
      android:padding="@dimen/dp_15"
      android:src="@mipmap/ic_adds" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tap to Rate:"
        android:textSize="@dimen/dp_20"
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_4"
        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_45"
        android:numStars="5"
        android:stepSize="1" />
  </LinearLayout>

  <TextView
      android:id="@+id/recipeTitle"
      android:layout_width= "match_parent"
      android:layout_height="@dimen/dp_50"
      android:layout_marginTop="@dimen/dp_5"
      android:gravity="center_vertical"
      android:background="@color/white"
      android:hint="Add a title..."
      android:paddingHorizontal="@dimen/dp_20" />

  <TextView
      android:id="@+id/recipeDescription"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_marginTop="@dimen/dp_5"
      android:background="@color/white"
      android:gravity="start"
      android:hint="Add a description..."
      android:paddingHorizontal="@dimen/dp_20"
      android:paddingVertical="@dimen/dp_20" />

  <TextView
      android:gravity="center_vertical"
      android:id="@+id/recipeIngredients"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="@dimen/dp_5"
      android:background="@color/white"
      android:hint="Add recipe ingredients..."
      android:paddingHorizontal="@dimen/dp_20"
      />

  <TextView

      android:gravity="center_vertical"
      android:id="@+id/recipeTags"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="@dimen/dp_5"
      android:background="@color/white"
      android:hint="Add recipe tags..."
      android:paddingHorizontal="@dimen/dp_20"
      />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="TextView"
      android:textAlignment="center"
      android:textColor="#E91E63"
      android:textStyle="bold"
      android:visibility="invisible"
      />

</LinearLayout>

