...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSearchButton"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@mipmap/search" />

            <TextView
                android:id="@+id/tvSearchButton"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCreateButton"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/shape_mainbgs"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/plus1" />

...
