...
    <RelativeLayout
        android:layout_width="@dimen/dp_180"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/recipeSubmit"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="#afb3ba"
            android:onClick="handleText"
...
